# FshareFuzz

./: .gitignore  CMakeCache.txt  Makefile  README.md  client.c  cmake_install.cmake  fshare.c  fshared.c  server.c
LIBS/: client.c  server.c  server.h
TESTING/: CMakeLists.txt  Makefile  cmake_install.cmake  fshare_main.c  fshared_main.c  gtest_client.cc  gtest_server.cc  stderr_output.txt
TESTING/LIBS/: client.c  client.h  server.c  server.h
TESTING/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
TESTING/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
TESTING/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
TESTING/serverCloud/: meow1.txt
TESTING/serverCloud/test/: meow1.txt
TESTING/serverCloud/test/dir1/: meow3.txt
TESTING/serverCloud/test/dir2/: meow4.txt
googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/dir1/: meow2.txt
